# interview-skyeng

./: .gitignore  docker-compose.yml  pyproject.toml
apps/core/: managers.py  mixins.py  models.py  utils.py
apps/core/management/commands/: delete_users.py
apps/files/: admin.py  models.py  tasks.py
apps/files/management/commands/: reports.py
apps/files/migrations/: 0001_initial.py  0002_file_user.py  0003_auto_20230904_1303.py  0004_file_verified.py
apps/logs/migrations/: 0001_initial.py
apps/reports/: admin.py  apps.py  models.py  tasks.py
apps/reports/migrations/: 0001_initial.py  0002_auto_20230904_1303.py  0003_auto_20230920_1339.py  0004_alter_report_status.py  0005_alter_report_status.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py
apps/users/templates/: base.html
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/5d7627c2-ef3c-4fa1-8051-d4ff53dbc127/: my_test.py
