[tool.poetry]
name = "interview-skyeng"
version = "0.1.0"
description = ""
authors = ["xp-rodion <only.learning.ariy@gmail.com>"]
readme = "README.md"
packages = [{include = "interview_skyeng"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
django-environ = "0.10.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
