[tool.poetry]
name = "interview-skyeng"
version = "0.1.0"
description = ""
authors = ["xp-rodion <only.learning.ariy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
django-environ = "0.10.0"
psycopg2-binary = "^2.9.7"
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
